--- a/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
+++ b/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
@@ -17,32 +17,43 @@
                 <rect key="frame" x="0.0" y="0.0" width="497" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="z0h-06-TJ6" userLabel="Photo">
-                        <rect key="frame" x="10" y="10" width="477" height="200"/>
+                    <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ThM-iM-jkB">
+                        <rect key="frame" x="20" y="20" width="457" height="200"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="z0h-06-TJ6" userLabel="Photo">
+                                <rect key="frame" x="0.0" y="0.0" width="457" height="200"/>
+                            </imageView>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="200" id="B8S-N8-QG8"/>
+                            <constraint firstItem="LUb-GN-XfT" firstAttribute="trailing" secondItem="z0h-06-TJ6" secondAttribute="trailing" id="HW0-Dk-7Ao"/>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="top" secondItem="LUb-GN-XfT" secondAttribute="top" id="blf-Af-i4h"/>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="leading" secondItem="LUb-GN-XfT" secondAttribute="leading" id="fdS-YL-YHP"/>
+                            <constraint firstItem="LUb-GN-XfT" firstAttribute="bottom" secondItem="z0h-06-TJ6" secondAttribute="bottom" id="wG1-1v-LcI"/>
+                            <constraint firstAttribute="height" constant="200" id="y2n-8t-Ly6"/>
                         </constraints>
-                    </imageView>
+                        <viewLayoutGuide key="contentLayoutGuide" id="eLJ-oP-28V"/>
+                        <viewLayoutGuide key="frameLayoutGuide" id="LUb-GN-XfT"/>
+                    </scrollView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birdman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTe-Fm-lKg" userLabel="Author label">
-                        <rect key="frame" x="10" y="220" width="68.5" height="21"/>
+                        <rect key="frame" x="10" y="230" width="68.5" height="21"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birdy Sinichka" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-fa-h89" userLabel="Description label">
-                        <rect key="frame" x="379" y="220" width="108" height="21"/>
+                        <rect key="frame" x="379" y="230" width="108" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9N-Lx-b8d" userLabel="Likes count label">
-                        <rect key="frame" x="10" y="251" width="63.5" height="19.5"/>
+                        <rect key="frame" x="10" y="261" width="63.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p6P-zb-j7E" userLabel="Like Button">
-                        <rect key="frame" x="437" y="251" width="50" height="30"/>
+                        <rect key="frame" x="437" y="261" width="50" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="8f4-tM-c31"/>
                             <constraint firstAttribute="height" constant="30" id="oQk-aY-Mit"/>
@@ -76,20 +87,18 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="p6P-zb-j7E" secondAttribute="trailing" constant="10" id="28V-de-pKG"/>
-                    <constraint firstItem="z0h-06-TJ6" firstAttribute="top" secondItem="bdf-bY-Ml0" secondAttribute="top" constant="10" id="Fur-zB-XUn"/>
-                    <constraint firstItem="gTe-Fm-lKg" firstAttribute="top" secondItem="z0h-06-TJ6" secondAttribute="bottom" constant="10" id="Gea-9v-2C6"/>
-                    <constraint firstItem="z0h-06-TJ6" firstAttribute="centerX" secondItem="bdf-bY-Ml0" secondAttribute="centerX" id="HUu-gb-lxe"/>
-                    <constraint firstItem="D9N-Lx-b8d" firstAttribute="top" secondItem="gTe-Fm-lKg" secondAttribute="bottom" constant="10" id="Ix6-tB-DMo"/>
-                    <constraint firstAttribute="bottom" secondItem="z0h-06-TJ6" secondAttribute="bottom" constant="90" id="NAg-2I-wd0"/>
                     <constraint firstItem="gTe-Fm-lKg" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="10" id="NI0-O4-Bdo"/>
-                    <constraint firstItem="p6P-zb-j7E" firstAttribute="top" secondItem="E0d-fa-h89" secondAttribute="bottom" constant="10" id="QCp-LZ-L33"/>
-                    <constraint firstItem="z0h-06-TJ6" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="10" id="Ryr-18-vZb"/>
+                    <constraint firstItem="ThM-iM-jkB" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="20" id="PEN-sc-OCW"/>
+                    <constraint firstItem="p6P-zb-j7E" firstAttribute="top" secondItem="E0d-fa-h89" secondAttribute="bottom" constant="10" id="PYS-rB-D2u"/>
+                    <constraint firstAttribute="trailing" secondItem="ThM-iM-jkB" secondAttribute="trailing" constant="20" id="cJe-sq-cL2"/>
                     <constraint firstAttribute="trailing" secondItem="E0d-fa-h89" secondAttribute="trailing" constant="10" id="d9K-EU-EfU"/>
                     <constraint firstItem="D9N-Lx-b8d" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="10" id="dcH-iH-v89"/>
                     <constraint firstItem="pe4-IE-LK3" firstAttribute="centerX" secondItem="bdf-bY-Ml0" secondAttribute="centerX" id="hjE-Pm-2pP"/>
                     <constraint firstItem="pe4-IE-LK3" firstAttribute="top" secondItem="bdf-bY-Ml0" secondAttribute="top" constant="50" id="kMP-jU-wGq"/>
-                    <constraint firstItem="E0d-fa-h89" firstAttribute="top" secondItem="z0h-06-TJ6" secondAttribute="bottom" constant="10" id="sef-Xx-fyG"/>
-                    <constraint firstAttribute="trailing" secondItem="z0h-06-TJ6" secondAttribute="trailing" constant="10" id="z7H-wX-AFK"/>
+                    <constraint firstItem="D9N-Lx-b8d" firstAttribute="top" secondItem="gTe-Fm-lKg" secondAttribute="bottom" constant="10" id="l1j-AM-DG1"/>
+                    <constraint firstItem="gTe-Fm-lKg" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="bottom" constant="10" id="o7i-ou-Bhy"/>
+                    <constraint firstItem="ThM-iM-jkB" firstAttribute="top" secondItem="bdf-bY-Ml0" secondAttribute="top" constant="20" id="ohP-JL-Bny"/>
+                    <constraint firstItem="E0d-fa-h89" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="bottom" constant="10" id="z6H-Z2-1sZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -99,6 +108,7 @@
                 <outlet property="likeButton" destination="p6P-zb-j7E" id="hUP-cU-CC8"/>
                 <outlet property="likesCountLabel" destination="D9N-Lx-b8d" id="1gW-Hc-QhK"/>
                 <outlet property="photoImageView" destination="z0h-06-TJ6" id="ed0-LH-Ywm"/>
+                <outlet property="photoScrollView" destination="ThM-iM-jkB" id="gGv-dH-f6v"/>
             </connections>
             <point key="canvasLocation" x="152.89855072463769" y="182.14285714285714"/>
         </tableViewCell>
