--- a/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
+++ b/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,8 +40,11 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birdy Sinichka" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-fa-h89" userLabel="Description label">
-                        <rect key="frame" x="379" y="230" width="108" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birdy Sinichka" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-fa-h89" userLabel="Description label">
+                        <rect key="frame" x="287" y="230" width="200" height="20.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="200" id="HzB-XO-7ZI"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -53,7 +56,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p6P-zb-j7E" userLabel="Like Button">
-                        <rect key="frame" x="437" y="261" width="50" height="30"/>
+                        <rect key="frame" x="437" y="260.5" width="50" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="8f4-tM-c31"/>
                             <constraint firstAttribute="height" constant="30" id="oQk-aY-Mit"/>
@@ -86,10 +89,10 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="p6P-zb-j7E" secondAttribute="trailing" constant="10" id="28V-de-pKG"/>
+                    <constraint firstItem="p6P-zb-j7E" firstAttribute="top" secondItem="E0d-fa-h89" secondAttribute="bottom" constant="10" id="4lc-Cm-rhJ"/>
                     <constraint firstItem="gTe-Fm-lKg" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="10" id="NI0-O4-Bdo"/>
                     <constraint firstItem="ThM-iM-jkB" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="20" id="PEN-sc-OCW"/>
-                    <constraint firstItem="p6P-zb-j7E" firstAttribute="top" secondItem="E0d-fa-h89" secondAttribute="bottom" constant="10" id="PYS-rB-D2u"/>
+                    <constraint firstItem="E0d-fa-h89" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="bottom" constant="10" id="TVu-W0-FPL"/>
                     <constraint firstAttribute="trailing" secondItem="ThM-iM-jkB" secondAttribute="trailing" constant="20" id="cJe-sq-cL2"/>
                     <constraint firstAttribute="trailing" secondItem="E0d-fa-h89" secondAttribute="trailing" constant="10" id="d9K-EU-EfU"/>
                     <constraint firstItem="D9N-Lx-b8d" firstAttribute="leading" secondItem="bdf-bY-Ml0" secondAttribute="leading" constant="10" id="dcH-iH-v89"/>
@@ -98,7 +101,7 @@
                     <constraint firstItem="D9N-Lx-b8d" firstAttribute="top" secondItem="gTe-Fm-lKg" secondAttribute="bottom" constant="10" id="l1j-AM-DG1"/>
                     <constraint firstItem="gTe-Fm-lKg" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="bottom" constant="10" id="o7i-ou-Bhy"/>
                     <constraint firstItem="ThM-iM-jkB" firstAttribute="top" secondItem="bdf-bY-Ml0" secondAttribute="top" constant="20" id="ohP-JL-Bny"/>
-                    <constraint firstItem="E0d-fa-h89" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="bottom" constant="10" id="z6H-Z2-1sZ"/>
+                    <constraint firstAttribute="trailing" secondItem="p6P-zb-j7E" secondAttribute="trailing" constant="10" id="q6T-J6-Kt0"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -113,11 +116,6 @@
             <point key="canvasLocation" x="152.89855072463769" y="182.14285714285714"/>
         </tableViewCell>
     </objects>
-    <designables>
-        <designable name="p6P-zb-j7E">
-            <size key="intrinsicContentSize" width="20.5" height="22"/>
-        </designable>
-    </designables>
     <resources>
         <image name="1" width="264" height="191"/>
         <image name="heart.fill" catalog="system" width="128" height="109"/>
