--- a/EpicSchoolHomework/TableView/Comments/CommentCellView.xib
+++ b/EpicSchoolHomework/TableView/Comments/CommentCellView.xib
@@ -17,12 +17,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tp9-ZB-C6A" userLabel="Author Label">
-                        <rect key="frame" x="10" y="10" width="50" height="28"/>
-                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
-                        <color key="textColor" systemColor="secondaryLabelColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-HY-SBg">
+                        <rect key="frame" x="10" y="10" width="46" height="20.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tp9-ZB-C6A" userLabel="Author Label">
+                                <rect key="frame" x="0.0" y="0.0" width="46" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comment" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdU-7u-dxI" userLabel="Comment Label">
                         <rect key="frame" x="10" y="48" width="394" height="20"/>
                         <constraints>
@@ -35,10 +40,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="cdU-7u-dxI" firstAttribute="leading" secondItem="WhI-kl-wa2" secondAttribute="leading" constant="10" id="0rN-Js-DnY"/>
-                    <constraint firstItem="cdU-7u-dxI" firstAttribute="top" secondItem="tp9-ZB-C6A" secondAttribute="bottom" constant="10" id="Qbp-mi-FQy"/>
+                    <constraint firstItem="cdU-7u-dxI" firstAttribute="top" secondItem="F4r-HY-SBg" secondAttribute="bottom" constant="17.5" id="FXp-vM-LO6"/>
+                    <constraint firstItem="F4r-HY-SBg" firstAttribute="top" secondItem="WhI-kl-wa2" secondAttribute="top" constant="10" id="G1e-NI-z7s"/>
                     <constraint firstAttribute="bottom" secondItem="cdU-7u-dxI" secondAttribute="bottom" constant="10" id="e8z-qz-us2"/>
-                    <constraint firstItem="tp9-ZB-C6A" firstAttribute="top" secondItem="WhI-kl-wa2" secondAttribute="top" constant="10" id="iK4-nq-Yei"/>
-                    <constraint firstItem="tp9-ZB-C6A" firstAttribute="leading" secondItem="WhI-kl-wa2" secondAttribute="leading" constant="10" id="llT-ep-IC3"/>
+                    <constraint firstItem="F4r-HY-SBg" firstAttribute="leading" secondItem="WhI-kl-wa2" secondAttribute="leading" constant="10" id="s1S-iW-AHv"/>
                     <constraint firstAttribute="trailing" secondItem="cdU-7u-dxI" secondAttribute="trailing" constant="10" id="uON-Gb-vQU"/>
                 </constraints>
             </tableViewCellContentView>
@@ -53,6 +58,9 @@
     <resources>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
