--- a/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
+++ b/EpicSchoolHomework/TableView/Cells/PhotoItemTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="497" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThM-iM-jkB">
+                    <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThM-iM-jkB">
                         <rect key="frame" x="20" y="20" width="457" height="200"/>
                         <subviews>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z0h-06-TJ6" userLabel="Photo">
@@ -28,14 +28,14 @@
                             </activityIndicatorView>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="top" secondItem="ThM-iM-jkB" secondAttribute="top" id="7b4-M6-u8U"/>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="leading" secondItem="ThM-iM-jkB" secondAttribute="leading" id="976-Ql-cjZ"/>
                             <constraint firstItem="nuK-J3-K9C" firstAttribute="centerY" secondItem="ThM-iM-jkB" secondAttribute="centerY" id="ATn-2k-Fpr"/>
-                            <constraint firstItem="LUb-GN-XfT" firstAttribute="trailing" secondItem="z0h-06-TJ6" secondAttribute="trailing" id="HW0-Dk-7Ao"/>
                             <constraint firstItem="nuK-J3-K9C" firstAttribute="centerX" secondItem="ThM-iM-jkB" secondAttribute="centerX" id="L8v-r0-Lym"/>
-                            <constraint firstItem="z0h-06-TJ6" firstAttribute="top" secondItem="LUb-GN-XfT" secondAttribute="top" id="blf-Af-i4h"/>
                             <constraint firstItem="z0h-06-TJ6" firstAttribute="centerX" secondItem="ThM-iM-jkB" secondAttribute="centerX" id="fS3-c8-B9Z"/>
-                            <constraint firstItem="z0h-06-TJ6" firstAttribute="leading" secondItem="LUb-GN-XfT" secondAttribute="leading" id="fdS-YL-YHP"/>
                             <constraint firstItem="z0h-06-TJ6" firstAttribute="centerY" secondItem="ThM-iM-jkB" secondAttribute="centerY" id="p4y-Tq-TLD"/>
-                            <constraint firstItem="LUb-GN-XfT" firstAttribute="bottom" secondItem="z0h-06-TJ6" secondAttribute="bottom" id="wG1-1v-LcI"/>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="trailing" secondItem="ThM-iM-jkB" secondAttribute="trailing" id="sF2-42-sp8"/>
+                            <constraint firstItem="z0h-06-TJ6" firstAttribute="bottom" secondItem="ThM-iM-jkB" secondAttribute="bottom" id="ssr-UN-AAN"/>
                             <constraint firstAttribute="height" constant="200" id="y2n-8t-Ly6"/>
                         </constraints>
                         <viewLayoutGuide key="contentLayoutGuide" id="eLJ-oP-28V"/>
@@ -57,16 +57,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="PCb-sN-pAp">
-                        <rect key="frame" x="20" y="258" width="91" height="22"/>
+                        <rect key="frame" x="20" y="250" width="91" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9N-Lx-b8d" userLabel="Likes count label">
-                                <rect key="frame" x="0.0" y="0.0" width="63.5" height="22"/>
+                                <rect key="frame" x="0.0" y="0.0" width="63.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p6P-zb-j7E" userLabel="Like Button">
-                                <rect key="frame" x="70.5" y="0.0" width="20.5" height="22"/>
+                                <rect key="frame" x="70.5" y="0.0" width="20.5" height="30"/>
                                 <color key="tintColor" systemColor="systemPinkColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="heart.fill" catalog="system"/>
@@ -78,6 +78,9 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="cv0-fv-UDf"/>
+                        </constraints>
                     </stackView>
                     <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pe4-IE-LK3" customClass="HeartBezierView" customModule="EpicSchoolHomework" customModuleProvider="target">
                         <rect key="frame" x="198.5" y="50" width="100" height="100"/>
@@ -96,7 +99,10 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IM8-hv-y61">
-                        <rect key="frame" x="374" y="246.5" width="103" height="33.5"/>
+                        <rect key="frame" x="374" y="250" width="103" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="IM4-xY-x0V"/>
+                        </constraints>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" title="Comments">
                             <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
