--- a/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
+++ b/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
@@ -29,8 +29,16 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82e-mV-Hhb">
+                    <rect key="frame" x="163.5" y="505.5" width="87.5" height="31"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="К фоткам"/>
+                    <connections>
+                        <action selector="navigateToPhotoListTapped:" destination="-1" eventType="touchUpInside" id="6Dt-OG-ATW"/>
+                    </connections>
+                </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="7H6-6a-3dV">
-                    <rect key="frame" x="20" y="292.5" width="374" height="311.5"/>
+                    <rect key="frame" x="20" y="144" width="374" height="311.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="lmy-qO-hSw" userLabel="EmailPassword">
                             <rect key="frame" x="68.5" y="0.0" width="237.5" height="150"/>
@@ -117,14 +125,6 @@
                         </button>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82e-mV-Hhb">
-                    <rect key="frame" x="163.5" y="654" width="87.5" height="31"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="К фоткам"/>
-                    <connections>
-                        <action selector="navigateToPhotoListTapped:" destination="-1" eventType="touchUpInside" id="6Dt-OG-ATW"/>
-                    </connections>
-                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -133,8 +133,8 @@
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Kvw-Bw-bTl"/>
                 <constraint firstItem="7H6-6a-3dV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RUM-4D-N4Q"/>
                 <constraint firstItem="82e-mV-Hhb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="UoB-JJ-VjM"/>
-                <constraint firstItem="7H6-6a-3dV" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Yqw-n8-CPF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7H6-6a-3dV" secondAttribute="trailing" constant="20" id="fWR-zJ-ghf"/>
+                <constraint firstItem="7H6-6a-3dV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="wm5-Yg-m5T"/>
             </constraints>
             <point key="canvasLocation" x="139" y="115"/>
         </view>
