--- a/EpicSchoolHomework/Views/Comments/CommentsListView.xib
+++ b/EpicSchoolHomework/Views/Comments/CommentsListView.xib
@@ -39,6 +39,7 @@
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06p-NV-RZ4">
                             <rect key="frame" x="339" y="0.0" width="55" height="53"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" title="">
                                 <imageReference key="image" image="arrow.up.circle" catalog="system" symbolScale="large"/>
