--- a/EpicSchoolHomework/Views/Comments/CommentCellView.xib
+++ b/EpicSchoolHomework/Views/Comments/CommentCellView.xib
@@ -17,22 +17,25 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-HY-SBg">
-                        <rect key="frame" x="10" y="10" width="46" height="20.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-HY-SBg">
+                        <rect key="frame" x="10" y="10" width="394" height="17"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tp9-ZB-C6A" userLabel="Author Label">
-                                <rect key="frame" x="0.0" y="0.0" width="46" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="197" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <color key="textColor" systemColor="systemOrangeColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAJ-gF-gmJ" userLabel="Date Label">
+                                <rect key="frame" x="197" y="0.0" width="197" height="17"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comment" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdU-7u-dxI" userLabel="Comment Label">
-                        <rect key="frame" x="10" y="48" width="394" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="F11-NE-1iE"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Комментарий" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdU-7u-dxI" userLabel="Comment Label">
+                        <rect key="frame" x="10" y="44.5" width="394" height="23.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
@@ -42,6 +45,7 @@
                     <constraint firstItem="cdU-7u-dxI" firstAttribute="leading" secondItem="WhI-kl-wa2" secondAttribute="leading" constant="10" id="0rN-Js-DnY"/>
                     <constraint firstItem="cdU-7u-dxI" firstAttribute="top" secondItem="F4r-HY-SBg" secondAttribute="bottom" constant="17.5" id="FXp-vM-LO6"/>
                     <constraint firstItem="F4r-HY-SBg" firstAttribute="top" secondItem="WhI-kl-wa2" secondAttribute="top" constant="10" id="G1e-NI-z7s"/>
+                    <constraint firstAttribute="trailing" secondItem="F4r-HY-SBg" secondAttribute="trailing" constant="10" id="Vnp-Ns-Nb1"/>
                     <constraint firstAttribute="bottom" secondItem="cdU-7u-dxI" secondAttribute="bottom" constant="10" id="e8z-qz-us2"/>
                     <constraint firstItem="F4r-HY-SBg" firstAttribute="leading" secondItem="WhI-kl-wa2" secondAttribute="leading" constant="10" id="s1S-iW-AHv"/>
                     <constraint firstAttribute="trailing" secondItem="cdU-7u-dxI" secondAttribute="trailing" constant="10" id="uON-Gb-vQU"/>
@@ -49,8 +53,8 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="authorLabel" destination="tp9-ZB-C6A" id="JpQ-bO-RRQ"/>
-                <outlet property="commentLabel" destination="cdU-7u-dxI" id="Ncj-Sq-O6I"/>
-                <outlet property="textLabel" destination="cdU-7u-dxI" id="HGP-Zc-CFV"/>
+                <outlet property="commentLabel" destination="cdU-7u-dxI" id="zQD-Tk-T7t"/>
+                <outlet property="dateLabel" destination="xAJ-gF-gmJ" id="cdG-7m-rYm"/>
             </connections>
             <point key="canvasLocation" x="113.04347826086958" y="-20.089285714285712"/>
         </tableViewCell>
@@ -58,6 +62,9 @@
     <resources>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
